// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <button
          class="button"
          style="color: rgb(68, 68, 68); border-color: #444;"
        >
          Please X!
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Card Default 1`] = `
<div>
  <div
    class="root"
  >
    <div
      class="card"
      style="transform: translate(100px, 200px);"
    >
      <div
        class="text"
      >
        どこで生れたかとんと見当けんとうがつかぬ。何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは。何で
      </div>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 30px;"
      />
    </div>
     
    <!---->
  </div>
  <div
    class="root"
  >
    <div
      class="card"
      style="transform: translate(600px, 300px);"
    >
      <div
        class="text"
      >
        何でも薄暗いじめじめした所でニャーニャー泣いていた事だけは
      </div>
       
      <textarea
        class="input input"
        placeholder="Type something here..."
        style="resize: none; overflow: hidden; height: 30px;"
      />
    </div>
     
    <!---->
  </div>
</div>
`;

exports[`Storyshots Centered Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    I’m centered
  </div>
</div>
`;

exports[`Storyshots Input Default 1`] = `
<div
  class="wrapper"
>
  <div
    class="centered"
  >
    <div
      class="wrapper"
    >
      <div
        class="centered"
      >
        <div
          style="width: 300px;"
        >
          <textarea
            class="input"
            placeholder="Type something here..."
            style="resize: none; overflow: hidden; height: 30px;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
